--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,12 @@ cache:
     - node_modules
 node_js:
   - '8'
+script:
+  - npm run test:ci
 after_success:
   - npm run semantic-release
+  - npm install -g codecov
+  - bash <(curl -s https://codecov.io/bash)
 branches:
   except:
     - /^v\d+\.\d+\.\d+$/
