--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "test": "jest --watch",
     "test:ci": "jest",
     "cm": "git-cz",
-    "semantic-release": "semantic-release",
-    "travis-deploy-once": "travis-deploy-once"
+    "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
@@ -20,16 +19,11 @@
   },
   "homepage": "https://github.com/3Blades/cypress-test-utils#readme",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-jest": "^22.0.6",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
     "commitizen": "^2.9.6",
     "cz-conventional-changelog": "^2.1.0",
     "jest": "^22.0.6",
     "jest-localstorage-mock": "^2.1.0",
-    "semantic-release": "^11.0.2",
-    "travis-deploy-once": "^4.3.1"
+    "semantic-release": "^11.0.2"
   },
   "config": {
     "commitizen": {
@@ -48,10 +42,8 @@
     "semi": false
   },
   "jest": {
-    "setupFiles": ["jest-localstorage-mock"]
-  },
-  "babel": {
-    "presets": ["env"],
-    "plugins": ["transform-es2015-modules-commonjs"]
+    "setupFiles": [
+      "jest-localstorage-mock"
+    ]
   }
 }
