--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@3blades/cypress-test-utils",
   "version": "0.0.0-development",
   "description": "Utilities for testing with Cypress",
+  "main": "index.js",
   "scripts": {
     "test": "jest --watch",
     "test:ci": "jest --coverage",
