--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.0-development",
   "description": "Utilities for testing with Cypress",
   "main": "index.js",
+  "author": "Ray Gesualdo <rgesualdo@3blades.io> (https://3blades.io)",
+  "license": "MIT",
   "scripts": {
     "test": "jest --watch",
     "test:ci": "jest --coverage",
@@ -13,12 +15,18 @@
     "type": "git",
     "url": "https://github.com/3Blades/cypress-test-utils.git"
   },
-  "author": "Ray Gesualdo <rgesualdo@3blades.io> (https://3blades.io)",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/3Blades/cypress-test-utils/issues"
   },
   "homepage": "https://github.com/3Blades/cypress-test-utils#readme",
+  "dependencies": {
+    "axios": "^0.17.1",
+    "imap-simple": "^4.0.0",
+    "lodash": "^4.17.4",
+    "micro": "^9.1.0",
+    "promise-compose": "^1.1.2",
+    "uuid": "^3.1.0"
+  },
   "devDependencies": {
     "commitizen": "^2.9.6",
     "cz-conventional-changelog": "^2.1.0",
@@ -30,17 +38,28 @@
       "path": "cz-conventional-changelog"
     }
   },
-  "dependencies": {
-    "axios": "^0.17.1",
-    "imap-simple": "^4.0.0",
-    "lodash": "^4.17.4",
-    "micro": "^9.1.0",
-    "promise-compose": "^1.1.2",
-    "uuid": "^3.1.0"
-  },
   "prettier": {
     "trailingComma": "es5",
     "singleQuote": true,
     "semi": false
+  },
+  "release": {
+    "analyzeCommits": {
+      "releaseRules": [
+        {
+          "type": "docs",
+          "scope": "README",
+          "release": "patch"
+        },
+        {
+          "type": "refactor",
+          "release": "patch"
+        },
+        {
+          "type": "chore",
+          "release": "patch"
+        }
+      ]
+    }
   }
 }
