--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.4",
     "micro": "^9.1.0",
     "promise-compose": "^1.1.2",
+    "shelljs": "^0.8.1",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
